Change a lot of paths from core.tcl.tk to core.tcl-lang.org, preventing unnecessary re-directs to be done by fossil. Also change http:// to https:// where appropriate.

--- a/tip/26.md
+++ b/tip/26.md
@@ -9,7 +9,7 @@
 	Discussions-To: news:comp.lang.tcl
 	Obsoletes:      19
 	Tcl-Version:    8.4
-	Implementation-URL: https://core.tcl.tk/tips/raw/assets/26.patch
+	Implementation-URL: https://core.tcl-lang.org/tips/raw/assets/26.patch
 -----
 
 # Abstract
