--- a/tip/346.md
+++ b/tip/346.md
@@ -50,7 +50,7 @@ in a completely hidden manner. Hence the global effect is a healthy one.
 
 # Reference Example
 
-See [Bug 1665628](/tcl/tktview/1665628).
+See [Bug 1665628](https://core.tcl-lang.org/tcl/tktview/1665628).
 
 # Copyright
 
