--- a/tip/376.md
+++ b/tip/376.md
@@ -8,7 +8,7 @@
 	Created:	14-Sep-2010
 	Tcl-Version:	8.6
 	Post-History:
-	Implementation-URL: https://core.tcl.tk/tdbc/
+	Implementation-URL: https://core.tcl-lang.org/tdbc/
 -----
 
 # Abstract
