--- a/tip/381.md
+++ b/tip/381.md
@@ -7,7 +7,7 @@
 	Author:		Donal K. Fellows <dkf@users.sf.net>
 	Created:	20-Oct-2010
 	Keywords:	TclOO, iTcl
-	Implementation-URL: https://core.tcl.tk/tcloo/timeline?r=development-next2
+	Implementation-URL: https://core.tcl-lang.org/tcloo/timeline?r=development-next2
 -----
 
 # Abstract
@@ -95,7 +95,7 @@ possible to jump to filters applied to the method.
 
 # Reference Implementation
 
-See <https://core.tcl.tk/tcloo/timeline?r=development-next2> for the proposed
+See <https://core.tcl-lang.org/tcloo/timeline?r=development-next2> for the proposed
 implementation \(notably commit-f5a2cfd0d4\).
 
 # Copyright
