--- a/tip/388.md
+++ b/tip/388.md
@@ -124,7 +124,7 @@ this TIP.
 
 # Reference Implementation
 
-A reference implementation is available at <http://core.tcl.tk/tcl> in branch
+A reference implementation is available at <https://core.tcl-lang.org/tcl> in branch
 tip-388-impl
 
 # Copyright
