--- a/tip/397.md
+++ b/tip/397.md
@@ -7,7 +7,7 @@
 	Author:		Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
 	Created:	13-Feb-2012
 	Keywords:	Tcl, TclOO, copy, clone
-	Implementation-URL: https://core.tcl.tk/tcloo/timeline?r=development-rfe3485060
+	Implementation-URL: https://core.tcl-lang.org/tcloo/timeline?r=development-rfe3485060
 -----
 
 # Abstract
@@ -52,7 +52,7 @@ directly\).
 # Reference Implementation
 
 See the "development-rfe3485060" branch of the tcloo repository:
-<https://core.tcl.tk/tcloo/timeline?r=development-rfe3485060>
+<https://core.tcl-lang.org/tcloo/timeline?r=development-rfe3485060>
 
 # Copyright
 
