--- a/tip/401.md
+++ b/tip/401.md
@@ -511,7 +511,7 @@ comment word is a comment word throughout so many contexts.
 A reference implementation is available as SF Tcl patch \#3522426
 <https://sourceforge.net/support/tracker.php?aid=3522426> . It includes some
 tests, but more could be needed. DGP has also created a branch 
-**tip-401** <http://core.tcl.tk/tcl/timeline?r=tip-401>  for it in the 
+**tip-401** <https://core.tcl-lang.org/tcl/timeline?r=tip-401>  for it in the 
 core fossil respository; further development is best conducted in the 
 latter.
 
