--- a/tip/402.md
+++ b/tip/402.md
@@ -76,7 +76,7 @@ exactly 2 slashes, as the current Windows and Cygwin implementations do.
 
 # Reference Implementation
 
-A reference implementation is available at <http://core.tcl.tk/tcl> in branch
+A reference implementation is available at <https://core.tcl-lang.org/tcl> in branch
 _jn-unc-vfs_.
 
 # Copyright
