--- a/tip/403.md
+++ b/tip/403.md
@@ -58,7 +58,7 @@ None
 
 # Reference Implementation
 
-A reference implementation is available at <http://core.tcl.tk/tk> in branch
+A reference implementation is available at <https://core.tcl-lang.org/tk> in branch
 _jn-web-colors_. It contains a test-case _color-1.5_, which checkes the
 RGB values of all known X11 colors with the above modifications. This test is
 marked _nonPortable_, simply because I don't know how many older X11 color
