--- a/tip/413.md
+++ b/tip/413.md
@@ -116,7 +116,7 @@ existing code.
 # Reference Implementation
 
 A reference implementation is available in the Tcl fossil repository on the
-_tip-318-update_ branch <https://core.tcl.tk/tcl/timeline?r=tip-318-update> .
+_tip-318-update_ branch <https://core.tcl-lang.org/tcl/timeline?r=tip-318-update> .
 
 # Copyright
 
