--- a/tip/414.md
+++ b/tip/414.md
@@ -39,7 +39,7 @@ the stub table being available. The full signature is:
 
 # Reference Implementation
 
-A reference implementation is available in the [**initsubsystems**](http://core.tcl.tk/tcl/info/initsubsystems) branch.
+A reference implementation is available in the [**initsubsystems**](https://core.tcl-lang.org/tcl/info/initsubsystems) branch.
 
 # Copyright
 
