--- a/tip/422.md
+++ b/tip/422.md
@@ -97,9 +97,9 @@ not be exported as symbols from the DLL, and their entries in the stub table wil
 
 # Reference Implementation
 
-A reference implementation is available in the [tip-422](https://core.tcl.tk/tcl/timeline?r=tip-422) branch.
+A reference implementation is available in the [tip-422](https://core.tcl-lang.org/tcl/timeline?r=tip-422) branch.
 
-There is also a [tip-422-for-8](https://core.tcl.tk/tcl/timeline?r=tip-422-for-8) branch, which shows the implementation
+There is also a [tip-422-for-8](https://core.tcl-lang.org/tcl/timeline?r=tip-422-for-8) branch, which shows the implementation
 for doing the deprecation in Tcl 8.7.
 
 # Copyright
