--- a/tip/429.md
+++ b/tip/429.md
@@ -60,7 +60,7 @@ Also, **string concat** is added to this section, for it is a bit longer than **
 
 # Reference implementation
 
-Available as branch tip-429 on core.tcl.tk.
+Available as branch tip-429 on core.tcl-lang.org.
 
 # Copyright
 
