--- a/tip/437.md
+++ b/tip/437.md
@@ -20,7 +20,7 @@ where required.
 
 # Rationale
 
-As identified in [Bug: 1247115, <https://core.tcl.tk/tk/tktview/1247115],> a
+As identified in [Bug: 1247115, <https://core.tcl-lang.org/tk/tktview/1247115],> a
 flat sashrelief is common for **panedwindow** widgets, when it separates two
 widgets with sunken relief.  For example, the left part can be a tree and the
 right part a text widget, both with a white background.  Under Windows, the
