--- a/tip/438.md
+++ b/tip/438.md
@@ -36,9 +36,9 @@ It appears that aside of **.text count -ypixels** there are several other
 cases where wrong results can be produced by text widget commands. These cases
 are illustrated in several bug reports:
 
- * <http://core.tcl.tk/tk/tktview/1566949>   \(.text yview moveto\)
+ * <https://core.tcl-lang.org/tk/tktview/1566949>   \(.text yview moveto\)
 
- * <http://core.tcl.tk/tk/tktview/e51941c>   \(.text yview\)
+ * <https://core.tcl-lang.org/tk/tktview/e51941c>   \(.text yview\)
 
 In all these cases, forcing the update by calling **.text count -update
 -ypixels 1.0 end** before calling **.text yview**, or **.text yview
