--- a/tip/439.md
+++ b/tip/439.md
@@ -125,7 +125,7 @@ procedure for that, this is outside the scope of this TIP.
 Semantic Versioning requires that any API which is removed in Tcl 9.0 must be
 made deprecated in some earlier minor Tcl 8.x release.
 
-An implementation of this TIP can be found at <http://core.tcl.tk/tcl> ; branch
+An implementation of this TIP can be found at <https://core.tcl-lang.org/tcl> ; branch
 "semver".
 
 # Rejected Alternatives
