--- a/tip/441.md
+++ b/tip/441.md
@@ -24,9 +24,9 @@ Currently the **listbox** widget always aligns its items leftwards. Some
 users miss a configuration options allowing to justify items in the
 **listbox** widget. These RFE include:
 
-  * RFE 454303, <https://core.tcl.tk/tk/tktview/454303> 
+  * RFE 454303, <https://core.tcl-lang.org/tk/tktview/454303> 
 
-  * RFE 3f456a5bb9, <https://core.tcl.tk/tk/tktview/3f456a5bb9> 
+  * RFE 3f456a5bb9, <https://core.tcl-lang.org/tk/tktview/3f456a5bb9> 
 
 # Proposed Change
 
