--- a/tip/443.md
+++ b/tip/443.md
@@ -22,12 +22,12 @@ Several users have reported they miss different tag configuration options in
 the **text** widget, stating they cannot achieve the rendering they target.
 Such RFE include:
 
- * RFE 1759972 <https://core.tcl.tk/tk/tktview/1759972> , with Patch
-   3469780 <https://core.tcl.tk/tk/tktview/3469780> 
+ * RFE 1759972 <https://core.tcl-lang.org/tk/tktview/1759972> , with Patch
+   3469780 <https://core.tcl-lang.org/tk/tktview/3469780> 
 
- * RFE 220889 <https://core.tcl.tk/tk/tktview/220889> 
+ * RFE 220889 <https://core.tcl-lang.org/tk/tktview/220889> 
 
- * RFE 1754048 <https://core.tcl.tk/tk/tktview/1754048> 
+ * RFE 1754048 <https://core.tcl-lang.org/tk/tktview/1754048> 
 
 # Proposed Change
 
@@ -101,8 +101,8 @@ It is proposed to add the following tag configuration options to the Tk
 
 # Rejected additional tag configuration options
 
-RFE 1759972 <https://core.tcl.tk/tk/tktview/1759972>  requested stippling
-\(**-selectbgstipple**, **-selectfgstipple**\) for selected text. Also RFE 1754048 <https://core.tcl.tk/tk/tktview/1754048>  requested stippling in left and right margins of the text widget \(**-lmargin1stipple**, **-lmargin2stipple**, **rmarginstipple**\).
+RFE 1759972 <https://core.tcl-lang.org/tk/tktview/1759972>  requested stippling
+\(**-selectbgstipple**, **-selectfgstipple**\) for selected text. Also RFE 1754048 <https://core.tcl-lang.org/tk/tktview/1754048>  requested stippling in left and right margins of the text widget \(**-lmargin1stipple**, **-lmargin2stipple**, **rmarginstipple**\).
 
 Any new stippling options was rejected during the discussion about this
 TIP. Reasons were as follows:
