--- a/tip/444.md
+++ b/tip/444.md
@@ -32,7 +32,7 @@ itself a weekend day and **count** is 0.
 
 # Reference Implementation
 
-Available at <http://core.tcl.tk/tcl/timeline?t=tip-444>
+Available at <https://core.tcl-lang.org/tcl/timeline?t=tip-444>
 
 # Discussion
 
