--- a/tip/452.md
+++ b/tip/452.md
@@ -72,7 +72,7 @@ following commands:
 
 # Reference Implementation
 
-See the [tip-452 branch](http://core.tcl.tk/tcl/timeline?n=100&r=tip-452), in particular, see `http-tip-452.test` for an example of using the procedures added by this package.
+See the [tip-452 branch](https://core.tcl-lang.org/tcl/timeline?n=100&r=tip-452), in particular, see `http-tip-452.test` for an example of using the procedures added by this package.
 
 ## Origins of Reference Implementation
 
