--- a/tip/454.md
+++ b/tip/454.md
@@ -26,7 +26,7 @@ Mostly, it looks just ugly, but there are critical use-cases, specially in scrol
 When the BWidget autoscroll package is used, which displays scrollbars on demand, the scrollbars do not disappear if the contents is gone.
 And there is nothing, a programmer can do, as the Configure event does not fire on the scrolled frame widget.
 
-Another example is the scrolledwindow example by Emiliano in ticket 2863003fff <https://core.tcl.tk/tk/info/12006979562649c9> , where the solution 2 specific part may be removed \(or is ignored\).
+Another example is the scrolledwindow example by Emiliano in ticket 2863003fff <https://core.tcl-lang.org/tk/info/12006979562649c9> , where the solution 2 specific part may be removed \(or is ignored\).
 
 A typical workaround is to configure the width/height manually after the last children was unmapped.
 Unfortunately, this fact may not be determined for example by scrolling widgets etc. An eventual Configure binding is not firing.
@@ -95,7 +95,7 @@ With the proposed patch applied, the removal of the last widget would restore th
 The proposal is to change request size of the frame automatically to 1x1 if the last children is unpacked/ungridded/destroyed.
 
 Koen Dankart has passed a patch for this solution containing 3 additional lines of C code.
-It is available in branch bug-d6b95ce492-alt: <http://core.tcl.tk/tk/timeline?r=bug-d6b95ce492-alt&nd&c=2016-09-22+09%3A16%3A21&n=200> .
+It is available in branch bug-d6b95ce492-alt: <https://core.tcl-lang.org/tk/timeline?r=bug-d6b95ce492-alt&nd&c=2016-09-22+09%3A16%3A21&n=200> .
 
 It just solves the issue by restoring initial size if the last children is unpacked/ungridded.
 
@@ -106,7 +106,7 @@ But that is a side effect of fixing this bug.
 
 Another proposal is to invoke the virtual event \<\<GeometryManager\>\> when the last children is unpacked/ungridded/destroyed.
 
-Emiliano has provided a ticket 2863003fff <https://core.tcl.tk/tk/info/2863003fff>  with the implementation in branch bug-d6b95ce492 <https://core.tcl.tk/tk/timeline?r=bug-d6b95ce492&nd&c=2016-09-21+06%3A32%3A55&n=200> :
+Emiliano has provided a ticket 2863003fff <https://core.tcl-lang.org/tk/info/2863003fff>  with the implementation in branch bug-d6b95ce492 <https://core.tcl-lang.org/tk/timeline?r=bug-d6b95ce492&nd&c=2016-09-21+06%3A32%3A55&n=200> :
 
 The virtual event **\<\<GeometryManager\>\>** is defined which informs the master \(a frame-like widget\) that it has no child widget any more and that its size is not managed any more by grid/pack.
 
@@ -179,7 +179,7 @@ A way to solve the issue in a compatible and working way is to use Emilianos add
 
    *   frame wiki page <http://wiki.tcl.tk/frame>
 
-   *   Tk bug ticket <https://core.tcl.tk/tk/info/d6b95ce49207c823> 
+   *   Tk bug ticket <https://core.tcl-lang.org/tk/info/d6b95ce49207c823> 
 
    *   Discussion on the core list <http://code.activestate.com/lists/tcl-core/16363/> 
 
