--- a/tip/457.md
+++ b/tip/457.md
@@ -311,7 +311,7 @@ This document proposes the following changes to the Tcl core:
 ## Reference Implementation
 
 The reference implementation is available in the tip-457
-<http://core.tcl.tk/tcl/timeline?r=tip-457>  branch.
+<https://core.tcl-lang.org/tcl/timeline?r=tip-457>  branch.
 
 The code is licensed under the BSD license.
 
