--- a/tip/461.md
+++ b/tip/461.md
@@ -187,7 +187,7 @@ attempts to address them.
 		   % expr {cat(0x1)}
 		   1
 
-      \(Bug [e7c21ed678](/tcl/tktview?name=e7c21ed678) is another
+      \(Bug [e7c21ed678](https://core.tcl-lang.org/tcl/tktview?name=e7c21ed678) is another
       manifestation of this general problem.\) Once again, adding additional
       string operations that behave, with respect to data types, exactly the
       same as ones that are already there will neither fix nor exacerbate the
