--- a/tip/464.md
+++ b/tip/464.md
@@ -62,9 +62,9 @@ The above list does not imply any ordering in the implementation.
 The support can be added by extending some keymapping lookup tables in Tk.
 
 A Ticket already exists with a proposed patch
-<http://core.tcl.tk/tk/tktview/499526180d6cd5ca7c02eed96c10e9d3630a807c>  and
+<https://core.tcl-lang.org/tk/tktview/499526180d6cd5ca7c02eed96c10e9d3630a807c>  and
 fvogel has also created a branch
-<http://core.tcl.tk/tk/timeline?r=tip-464> .
+<https://core.tcl-lang.org/tk/timeline?r=tip-464> .
 
 # Copyright
 
