--- a/tip/466.md
+++ b/tip/466.md
@@ -448,7 +448,7 @@ new code will get merged into trunk.
 # Implementation
 
 Implementation of the revised text widget code has been placed in branch
-<http://core.tcl.tk/tk/timeline?r=revised_text>  of the fossil repository.
+<https://core.tcl-lang.org/tk/timeline?r=revised_text>  of the fossil repository.
 
 This implementation compiles on Linux, Windows, and OS X. It respects the
 standards of Tk \(C99 standard, and also the Tcl source code formatting
