--- a/tip/467.md
+++ b/tip/467.md
@@ -46,13 +46,13 @@ some Tk TIPs, and never worked particularly well with the old TIP format\).
 
 # Specification
 
-Proposed URL for the new repository will be <http://core.tcl.tk/tips>
+Proposed URL for the new repository will be <https://core.tcl-lang.org/tips>
 
 ## Backwards compatibility
 
- * _tip.tcl.tk/<NUM>.html_ should still show a rendered result. This could be redirected to _core.tcl.tk/tips/doc/trunk/tip/<NUM>.md_
+ * _tip.tcl.tk/<NUM>.html_ should still show a rendered result. This could be redirected to _core.tcl-lang.org/tips/doc/trunk/tip/<NUM>.md_
 
- * _tip.tcl.tk_ offers several converted formats \(XML, \*roff, ...\). The fossil option will be to use the _core.tcl.tk/tips/file/tip/<NUM>.md?download_ URL to get the raw Markdown downloads. For getting the other options one could convert the markdown source file using something like pandoc.
+ * _tip.tcl.tk_ offers several converted formats \(XML, \*roff, ...\). The fossil option will be to use the _core.tcl-lang.org/tips/file/tip/<NUM>.md?download_ URL to get the raw Markdown downloads. For getting the other options one could convert the markdown source file using something like pandoc.
 
  * E-mail address are not hidden in the source and in the rendered result.  If e-mail addresses need to be hidden there are two options
 
