--- a/tip/469.md
+++ b/tip/469.md
@@ -73,7 +73,7 @@ No incompatibilities are introduced.
 # Reference Implementation
 
 A really bare-bones reference implementation is available as a patch
-<http://paste.tclers.tk/4231> . Also, a branch named tip-469 in fossil has been created: <https://core.tcl.tk/tcl/timeline?r=tip-469> .
+<http://paste.tclers.tk/4231> . Also, a branch named tip-469 in fossil has been created: <https://core.tcl-lang.org/tcl/timeline?r=tip-469> .
 
 A thus-patched tclsh can successfully wait for input-level changes
 on TIP-author's "nano-pi" raspberryPI-like platform with a chipset
