--- a/tip/470.md
+++ b/tip/470.md
@@ -25,7 +25,7 @@ out what the context class or object is.
 
 For example, in the _oo::util_ package of Tcllib, the code for discovering
 what the context class is includes this
-<http://core.tcl-lang.org/tcllib/artifact/51d71f560ceb7d63?ln=77> :
+<https://core.tcl-lang.org/tcllib/artifact/51d71f560ceb7d63?ln=77> :
 
 	    # Get the name of the current class or class delegate 
 	    set cls [namespace which [lindex [info level -1] 1]]
@@ -55,7 +55,7 @@ which will get the context object, or return NULL and put an error in the
 interpreter if there is no context object in the frame or the context object
 has been deleted. The functionality is that of **TclOOGetDefineCmdContext**
 in _tclOODefineCmds.c_
-<http://core.tcl-lang.org/tcl/artifact/7d58f1a701168168?ln=682> , but the text
+<https://core.tcl-lang.org/tcl/artifact/7d58f1a701168168?ln=682> , but the text
 of the error messages might be changed.
 
 # Copyright
