--- a/tip/473.md
+++ b/tip/473.md
@@ -27,7 +27,7 @@ Having this capability allows objects to be used as factories for namespaces,
 which is in many ways an inversion of the way that TclOO was designed \(with
 namespaces as the basis for objects\). It was requested by Nathan Coulter as a
 way to enable more complex behaviour in Rivet and NaviServer. See Tcl Issue
-dd3b844fda <http://core.tcl.tk/tcl/tktview/dd3b844fdabdeae5fcb0>  for more
+dd3b844fda <https://core.tcl-lang.org/tcl/tktview/dd3b844fdabdeae5fcb0>  for more
 information.
 
 # Proposed Change
@@ -46,7 +46,7 @@ The meaning of the result of the command is unchanged.
 
 # Implementation
 
-See the oo-copy-ns branch. <http://core.tcl.tk/tcl/timeline?r=oo-copy-ns> 
+See the oo-copy-ns branch. <https://core.tcl-lang.org/tcl/timeline?r=oo-copy-ns> 
 
 # Copyright
 
