--- a/tip/475.md
+++ b/tip/475.md
@@ -34,7 +34,7 @@ The current design of [`string replace`] expressly (albeit inexplicably)
 prevents its use for performing string insertion.  TIP 323 originally proposed
 to extend [`string replace`] to allow string insertion, but this aspect of TIP
 323 was [withdrawn]
-(https://core.tcl.tk/tips/fdiff?v1=6e0ba0ee9838accc&v2=34809f1432fc528f&sbs=1)
+(https://core.tcl-lang.org/tips/fdiff?v1=6e0ba0ee9838accc&v2=34809f1432fc528f&sbs=1)
 for the sake of compatibility.
 
 > *Clarification: TIP 475 proposes no changes to the semantics of [`string
@@ -71,7 +71,7 @@ Furthermore, this new function should be publicly exported using the stubs
 interface so extension code can call it without having to enter the interpreter.
 The desirability of providing C APIs is made clear by the existence of the the
 [FlightAware [`array`] enumeration C API project]
-(http://core.tcl.tk/tcl/timeline?t=amg-array-enum-c-api).
+(https://core.tcl-lang.org/tcl/timeline?t=amg-array-enum-c-api).
 
 # Current Behavior
 
@@ -205,7 +205,7 @@ replace`] commands in terms of `Tcl_ReplaceObj`().
 A pure Tcl reference implementation is given [above](#ref).
 
 The [`amg-string-insert`]
-(http://core.tcl.tk/tcl/timeline?t=amg-string-insert) branch in the Tcl Fossil
+(https://core.tcl-lang.org/tcl/timeline?t=amg-string-insert) branch in the Tcl Fossil
 repository provides an optimized C implementation, complete with documentation,
 bytecode compilation, and a full set of test cases exercising all code paths.
 
@@ -216,7 +216,7 @@ differences in end-relative indexing.
 
 Implementing [`string insert`] in terms of `strreplace` would require modifying
 the interface to `strreplace` and would therefore break compatibility with
-[tclquadcode] (https://core.tcl.tk/tclquadcode/) and potentially other projects
+[tclquadcode] (https://core.tcl-lang.org/tclquadcode/) and potentially other projects
 that depend on the \[[`tcl::unsupported::assemble`](http://wiki.tcl.tk/28070)]
 and \[[`tcl::unsupported::disassemble`](http://wiki.tcl.tk/21445)] commands.
 
@@ -229,14 +229,14 @@ implementations of the various subroutines that now call it.
 # Open Issues
 
 The `Tcl_ReplaceObj`() function header comment includes [this TODO note]
-(https://core.tcl.tk/tcl/artifact?name=6934c9ea66d17949&ln=3312-3315):
+(https://core.tcl-lang.org/tcl/artifact?name=6934c9ea66d17949&ln=3312-3315):
 
 > Memory allocation failure is only checked when concatenating shared, non-pure
 > byte array, non-pure Unicode character array strings.  Need to commit to a
 > consistent memory allocation failure handling policy.
 
 This comment is describing the [case]
-(https://core.tcl.tk/tcl/artifact?name=6934c9ea66d17949&ln=3575-3592) in which
+(https://core.tcl-lang.org/tcl/artifact?name=6934c9ea66d17949&ln=3575-3592) in which
 `Tcl_ReplaceObj`() calls `TclStringCatObjv`() to concatenate its two arguments.
 `TclStringCatObjv`() returns TCL_ERROR on memory allocation failure, and
 `Tcl_ReplaceObj`() dutifully translates that to a NULL return, with detailed
