--- a/tip/477.md
+++ b/tip/477.md
@@ -1186,7 +1186,7 @@ the values passed through the `OPTS` macro on the command line.
 
 # <a id='toc-53'></a>Reference implementation
 
-The vc-reform branch in the core.tcl.tk repositories contains work-in-progress.
+The vc-reform branch in the core.tcl-lang.org repositories contains work-in-progress.
 In addition to Tcl and Tk, the `sampleextension`, `thread`, `tclvfs`,
 `tcludp`, `tdom`, `mpexpr` and `tktreectrl` have been converted.
 
