--- a/tip/479.md
+++ b/tip/479.md
@@ -186,7 +186,7 @@ Type: string
 Default: null
 Options: null, boolean, integer, wide, entier, double
 
-To support [tip#480](https://core.tcl.tk/tips/doc/trunk/tip/480.md). For now strictly advisory.
+To support [tip#480](https://core.tcl-lang.org/tips/doc/trunk/tip/480.md). For now strictly advisory.
 In the future this will check that the incoming values are the specified type.
 
 # Implementation
