--- a/tip/482.md
+++ b/tip/482.md
@@ -46,7 +46,7 @@ and have this propagate through the build system.
 
 # Reference Implementation
 
-The reference implementation is available in the tk-stu-pkg branch. <http://core.tcl.tk/tk/timeline?r=tk-stu-pkg>
+The reference implementation is available in the tk-stu-pkg branch. <https://core.tcl-lang.org/tk/timeline?r=tk-stu-pkg>
 
 The code is licensed under the same license as Tk.
 
