--- a/tip/483.md
+++ b/tip/483.md
@@ -89,12 +89,12 @@ Examples of the files expected to be found in the configured directories in pare
 
 # Status 2018/07/04:
 * Changes made based on recommendations in <http://code.activestate.com/lists/tcl-core/19816/>
-* Tk checkin: <https://core.tcl.tk/tk/info/d65d0705151eb38b>
-* Tcl checkin: <https://core.tcl.tk/tcl/info/14bb7ec850ddaf66>
+* Tk checkin: <https://core.tcl-lang.org/tk/info/d65d0705151eb38b>
+* Tcl checkin: <https://core.tcl-lang.org/tcl/info/14bb7ec850ddaf66>
 
 # Reference Implementation
 
-The reference implementation is available in the tk-stu-pkg branch. <http://core.tcl.tk/tk/timeline?r=tk-stu-pkg>
+The reference implementation is available in the tk-stu-pkg branch. <https://core.tcl-lang.org/tk/timeline?r=tk-stu-pkg>
 
 The code is licensed under the same license as Tk.
 
