--- a/tip/485.md
+++ b/tip/485.md
@@ -14,7 +14,7 @@
 The "case" command, and the "read\|puts ... nonewline" construct are replaced
 by better commands long ago (resp. "switch" and "read\|puts -nonewline ..."),
 but the old forms were never actually removed from the Tcl code base. They still
-work. See also [bug #3151675](https://core.tcl.tk/tcl/tktview/3151675).
+work. See also [bug #3151675](https://core.tcl-lang.org/tcl/tktview/3151675).
 For Tcl 9.0 it is finally time to actually remove it.
 
 In addition, there are a number of C API's which have better successors
@@ -118,7 +118,7 @@ Those functions are already removed in the "novem" branch:
 
  * `Tcl_ListMathFuncs`
 
-An implementation of this TIP can be found in the [tip-485](https://core.tcl.tk/tcl/timeline?r=tip-485) branch.
+An implementation of this TIP can be found in the [tip-485](https://core.tcl-lang.org/tcl/timeline?r=tip-485) branch.
 This branch is based on "core-8-branch" (Tcl 8.7), but can be trivially merged forward to trunk (Tcl 9.0).
 
 # Rejected Alternatives
