--- a/tip/486.md
+++ b/tip/486.md
@@ -32,7 +32,7 @@ with follow-up intermediate releases. Thread 3.0 will be released together with 
 
 # Implementation
 
-An implementation of this TIP can be found in the [novem](https://core.tcl.tk/thread/timeline?r=novem) branch.
+An implementation of this TIP can be found in the [novem](https://core.tcl-lang.org/thread/timeline?r=novem) branch.
 
 # Copyright
 
