--- a/tip/487.md
+++ b/tip/487.md
@@ -38,8 +38,8 @@ is not available on your system. Windows XP and later will be OK.
 
 # Implementation
 
-An implementation of this TIP can be found in the [tip-487](https://core.tcl.tk/tcl/timeline?r=tip-487) branch.
-Tk has a [tip-487](https://core.tcl.tk/tk/timeline?r=tip-487) branch as well.
+An implementation of this TIP can be found in the [tip-487](https://core.tcl-lang.org/tcl/timeline?r=tip-487) branch.
+Tk has a [tip-487](https://core.tcl-lang.org/tk/timeline?r=tip-487) branch as well.
 
 # Rejected Alternatives
 
