--- a/tip/488.md
+++ b/tip/488.md
@@ -71,7 +71,7 @@ smaller than 17, will not guarantee a lossless conversion to and from strings.
 
 # <a id='toc-6'></a>Reference Implementation
 
-A [branch](http://core.tcl.tk/tcl/timeline?r=tip-488) is available.
+A [branch](https://core.tcl-lang.org/tcl/timeline?r=tip-488) is available.
 
 # <a id='toc-7'></a>See Also
 
