--- a/tip/490.md
+++ b/tip/490.md
@@ -300,7 +300,7 @@ proc ::msgcat::PackageNamespaceGet {} {
 </pre>
 
 The implementation is in tcl fossil in branch
-[tip490-msgcat-oo-2](https://core.tcl.tk/tcl/timeline?r=tip490-msgcat-oo-2).
+[tip490-msgcat-oo-2](https://core.tcl-lang.org/tcl/timeline?r=tip490-msgcat-oo-2).
 
 There are tests but no man page changes yet.
 Please use this text as man-page.
