--- a/tip/491.md
+++ b/tip/491.md
@@ -71,7 +71,7 @@ In Tcl 9:
 
 # Implementation
 
-An implementation of this TIP can be found in the [tip-491](https://core.tcl.tk/tcl/timeline?r=tip-491) branch.
+An implementation of this TIP can be found in the [tip-491](https://core.tcl-lang.org/tcl/timeline?r=tip-491) branch.
 
 # Copyright
 
