--- a/tip/492.md
+++ b/tip/492.md
@@ -16,7 +16,7 @@ This TIP provides user access to the busy window that Tk uses to let a user thin
 
 # Rationale
 
-The tk::busy documentation describes how a busy window is created to block events. The path of this busy window can be used to handle some events. This path is dependent on whether the widget to be covered is a toplevel or not, see [implementation details here] (http://core.tcl.tk/tk/artifact/3a2775faf288a7c9?ln=535,556) and also the man page for **tk busy**.
+The tk::busy documentation describes how a busy window is created to block events. The path of this busy window can be used to handle some events. This path is dependent on whether the widget to be covered is a toplevel or not, see [implementation details here] (https://core.tcl-lang.org/tk/artifact/3a2775faf288a7c9?ln=535,556) and also the man page for **tk busy**.
 
 As a consequence, this logic needs to be known by any user of the **tk busy** command. Offering  a way to get the path of the busy window would avoid this dependency on the implementation details.
 
@@ -32,7 +32,7 @@ It is proposed to:
 # Implementation
 
 An implementation of this TIP can be found in the [tip-492 branch]
-(https://core.tcl.tk/tk/timeline?r=tip-492).
+(https://core.tcl-lang.org/tk/timeline?r=tip-492).
 
 # Copyright
 
