--- a/tip/494.md
+++ b/tip/494.md
@@ -78,9 +78,9 @@ If you compile your extension with -D_TCL\_8\_COMPAT_, those 10 functions will b
 
 There are 2 other ways to make this change, which can do it without the use of the _TCL\_8\_COMPAT_ macro:
 
-  * Add _1_ to the left and right hand side of the comparison. E.g. [as here](https://core.tcl.tk/tk/fdiff?v1=100235897e9cf359&v2=9cf86629040df0d3)
+  * Add _1_ to the left and right hand side of the comparison. E.g. [as here](https://core.tcl-lang.org/tk/fdiff?v1=100235897e9cf359&v2=9cf86629040df0d3)
 
-  * Don't compare to -1 using < or >, but always to TCL\_IO\_FAILURE using == or != . E.g. [as here](https://core.tcl.tk/tk/info/abe0d3b121cbb12d)
+  * Don't compare to -1 using < or >, but always to TCL\_IO\_FAILURE using == or != . E.g. [as here](https://core.tcl-lang.org/tk/info/abe0d3b121cbb12d)
 
 Tk and [sqlite](http://cyqlite.sourceforge.net/cgi-bin/sqlite/info/17c148b94008df81) are already converted to make full use of TIP #494. Other extensions included with Tcl (e.g. tdbc) are unaffected.
 
@@ -97,7 +97,7 @@ So, this TIP doesn't make a final decision yet what will be the final type retur
 # Implementation
 
 The implementation of this TIP can be found in the [memory-API branch]
-(https://core.tcl.tk/tcl/timeline?r=memory-API).
+(https://core.tcl-lang.org/tcl/timeline?r=memory-API).
 
 # Copyright
 
