--- a/tip/495.md
+++ b/tip/495.md
@@ -105,7 +105,7 @@ perform identical subsitutions to the same file.
 
 A standard library of tools (provisinally named "practcl") will be provided in
 tcllib and as a single file distribution in the same repository as the TEA
-reference files. (http://core.tcl.tk/tclconfig)
+reference files. (https://core.tcl-lang.org/tclconfig)
 
 This library includes implementations for all build, installation, and integration tasks. The
 file can be directly sourced, or invoked with `package require practcl`.
