--- a/tip/498.md
+++ b/tip/498.md
@@ -47,17 +47,17 @@ complication is that it's possible to simultaneously access both the deleted
 namespace and a new namespace having the same name.  Reports that illustrate
 these issues include:
 
-> [A namespace loses track of itself](https://core.tcl.tk/tcl/tktview?name=46450b464e)
+> [A namespace loses track of itself](https://core.tcl-lang.org/tcl/tktview?name=46450b464e)
 
-> [command found in deleted namespace](https://core.tcl.tk/tcl/tktview?name=1655294fff)
+> [command found in deleted namespace](https://core.tcl-lang.org/tcl/tktview?name=1655294fff)
 
-> [namespace deletion: trace that calls [apply], specifying the namespace, doesn't fire.](https://core.tcl.tk/tcl/tktview/e86e178aff)
+> [namespace deletion: trace that calls [apply], specifying the namespace, doesn't fire.](https://core.tcl-lang.org/tcl/tktview/e86e178aff)
 
 Finally, the current cleanup routines perform enough contortions to be a real
 barrier to any further improvement of the system.  
 
 The work to [simplify the TclOO
-implementation](https://core.tcl.tk/tcl/info/0bae33cd39c2333e), lead to the
+implementation](https://core.tcl-lang.org/tcl/info/0bae33cd39c2333e), lead to the
 work to simplify Tcl_DeleteNamespace.
 
 There are various reports about traces that that silently fail under one
@@ -80,18 +80,18 @@ is deleted.
 
 The completion of this TIP will render more tractable the issue [trace deletes the namespace
 when a command is replaced, producing "called Tcl_CreateHashEntry on deleted
-table"](https://core.tcl.tk/tcl/info/0e4d88b650).
+table"](https://core.tcl-lang.org/tcl/info/0e4d88b650).
 
 `activationCount` is removed from the `Namespace` structure, slightly reducing
 its size.  See also, [Improve average size of
-Namespace](https://core.tcl.tk/tcl/tktview?name=2694630fff).
+Namespace](https://core.tcl-lang.org/tcl/tktview?name=2694630fff).
 
 `NS_KILLED` will no longer be needed.  A namespace being deleted is either
 `NS_DYING` while deallocation of related resources is in progress or `NS_DEAD`
 while it's still referenced somewhere.
 
 The issue [(tailcall\|yieldto) failed to find the proper namespace
-Abort](https://core.tcl.tk/tcl/tktview?name=3592747fff) becomes more
+Abort](https://core.tcl-lang.org/tcl/tktview?name=3592747fff) becomes more
 straightforward to reason about since there are no longer namespaces that
 exist but that are not reachable by name.
 
@@ -109,7 +109,7 @@ to tear down the structure before removing the foundation.
 # Implementation
 
 See the [bug-e593adf103-core-8
-branch](https://core.tcl.tk/tcl/timeline?n=100&r=bug-e593adf103-core-8).
+branch](https://core.tcl-lang.org/tcl/timeline?n=100&r=bug-e593adf103-core-8).
 
 
 
