--- a/tip/499.md
+++ b/tip/499.md
@@ -171,7 +171,7 @@ With this extension, multiple first-level message files may be loaded.
 # Implementation
 
 The implementation is in tcl fossil in branch
-[tip499-msgcat-custom-preferences](https://core.tcl.tk/tcl/timeline?r=tip499-msgcat-custom-preferences).
+[tip499-msgcat-custom-preferences](https://core.tcl-lang.org/tcl/timeline?r=tip499-msgcat-custom-preferences).
 
 There are tests but no man page jet.
 Please use this text as man-page.
