--- a/tip/501.md
+++ b/tip/501.md
@@ -30,7 +30,7 @@ already a dict, and provide a shortcut for the most common case.
 
 # Implementation
 
-A new branch has been added to the tcl fossil system [tip-501](https://core.tcl.tk/tcl/timeline?r=tip-501)
+A new branch has been added to the tcl fossil system [tip-501](https://core.tcl-lang.org/tcl/timeline?r=tip-501)
 
 The crux of the implementation is adding "dict" to the IS ensemble:
 
