--- a/tip/507.md
+++ b/tip/507.md
@@ -196,7 +196,7 @@ There was some discussion on the further usage and maintenance of this image typ
 
 # Implementation
 
-A patch implementing these changes is available in the fossil repository in the [tip-507 branch](https://core.tcl.tk/tk/timeline?r=tip-507).
+A patch implementing these changes is available in the fossil repository in the [tip-507 branch](https://core.tcl-lang.org/tk/timeline?r=tip-507).
 
 The new format is described in the photo(n) man page.
 
