--- a/tip/508.md
+++ b/tip/508.md
@@ -201,7 +201,7 @@ The default value can be set, modified or unset by trace handlers:
 # Implementation
 
 The proposed implementation is available on branch
-[tip-508](https://core.tcl.tk/tcl/timeline?r=tip-508) in the Tcl Fossil
+[tip-508](https://core.tcl-lang.org/tcl/timeline?r=tip-508) in the Tcl Fossil
 repository.
 
 # Copyright
