--- a/tip/509.md
+++ b/tip/509.md
@@ -110,7 +110,7 @@ is very unlikely that this will break any existing code:
 
 # Related Bugs
 
-[Bug #f4f44174](https://core.tcl.tk/tcl/tktview/f4f44174) demonstrates the
+[Bug #f4f44174](https://core.tcl-lang.org/tcl/tktview/f4f44174) demonstrates the
 deadlock issue with a script based on TclX. The root cause is the asynchronous
 event handler's `Tcl_Mutex` being locked twice from the same thread when a
 signal handler interrupts a thread in the middle of a mutex-protected section,
@@ -120,7 +120,7 @@ this issue.
 # Implementation
 
 The proposed implementation is available on branch
-[tip-509](https://core.tcl.tk/tcl/timeline?r=tip-509) in the Tcl Fossil
+[tip-509](https://core.tcl-lang.org/timeline?r=tip-509) in the Tcl Fossil
 repository.
 
 # Copyright
