--- a/tip/510.md
+++ b/tip/510.md
@@ -47,7 +47,7 @@ New oo::class like widgets **tko::frame**, **tko::labelframe** and **tko::toplev
 
 New **tko::widget** oo base class for widgets.
 
-> The class provide the extended cget/configure tcl methods (see [`tkoWidget.n.md`](https://core.tcl.tk/tk/doc/tip-510/doc/tkoWidget.n.md)) and a C interface (see [`tkoWidget.3.md`](https://core.tcl.tk/tk/doc/tip-510/doc/tkoWidget.3.md)) to build new widgets.
+> The class provide the extended cget/configure tcl methods (see [`tkoWidget.n.md`](https://core.tcl-lang.org/tk/doc/tip-510/doc/tkoWidget.n.md)) and a C interface (see [`tkoWidget.3.md`](https://core.tcl-lang.org/tk/doc/tip-510/doc/tkoWidget.3.md)) to build new widgets.
 
 # Rationale
 
@@ -78,52 +78,52 @@ The new widgets **graph** and **path** are also implemented as **oo::class**. Th
 # Implementation
 
 A patch implementing these changes is available in the fossil
-repository in the [tip-510 branch](https://core.tcl.tk/tk/timeline?r=tip-510).
+repository in the [tip-510 branch](https://core.tcl-lang.org/tk/timeline?r=tip-510).
 
 ## Documentation
 
 Documentation is available in md-Format in the .../doc/ directory.
 
-- [`tkoWidget.3.md`](https://core.tcl.tk/tk/doc/tip-510/doc/tkoWidget.3.md) C interface
-- [`tkoWidget.n.md`](https://core.tcl.tk/tk/doc/tip-510/doc/tkoWidget.n.md) Tcl interface
-- [`path.n.md`](https://core.tcl.tk/tk/doc/tip-510/doc/path.n.md) path widget documentation
-- [`graph.n.md`](https://core.tcl.tk/tk/doc/tip-510/doc/graph.n.md) graph widget documentation
-- [`vector.n.md`](https://core.tcl.tk/tk/doc/tip-510/doc/vector.n.md) graph::vector command documentation
+- [`tkoWidget.3.md`](https://core.tcl-lang.org/tk/doc/tip-510/doc/tkoWidget.3.md) C interface
+- [`tkoWidget.n.md`](https://core.tcl-lang.org/tk/doc/tip-510/doc/tkoWidget.n.md) Tcl interface
+- [`path.n.md`](https://core.tcl-lang.org/tk/doc/tip-510/doc/path.n.md) path widget documentation
+- [`graph.n.md`](https://core.tcl-lang.org/tk/doc/tip-510/doc/graph.n.md) graph widget documentation
+- [`vector.n.md`](https://core.tcl-lang.org/tk/doc/tip-510/doc/vector.n.md) graph::vector command documentation
 
 ## C interface
 
 C-source interface files are in `.../generic/tko/`.  No functionality is currently exported.
 
-- [`tkoWidget.h`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoWidget.h) **tko::widget** C functions and definitions.
-- [`tkoPath.h`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoPath.h) **path** widget
-- [`tkoGraph.h`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoGraph.h) **graph** widget
+- [`tkoWidget.h`](https://core.tcl-lang.org/tk/doc/tip-510/generic/tko/tkoWidget.h) **tko::widget** C functions and definitions.
+- [`tkoPath.h`](https://core.tcl-lang.org/tk/doc/tip-510/generic/tko/tkoPath.h) **path** widget
+- [`tkoGraph.h`](https://core.tcl-lang.org/tk/doc/tip-510/generic/tko/tkoGraph.h) **graph** widget
 
 ## C sources
 
 C-source code files are in `.../generic/tko/`. The new files are  added to the makefiles. The calls to the initialization functions are added in tkWindow.c
 
-- [`tkoFrame.c`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoFrame.c) **tko::frame**, **tko::labelframe** and **tko::toplevel** implementation
+- [`tkoFrame.c`](https://core.tcl-lang.org/tk/doc/tip-510/generic/tko/tkoFrame.c) **tko::frame**, **tko::labelframe** and **tko::toplevel** implementation
 - `tkoGraph*.[ch]` **graph** widget implementation
 - `tkoVector*.[ch]` **graph::vector** command implementation
 - `tkoRbc*.[ch]` Additional [Rbc][] commands used in **graph** and **graph::vector**
 - `tkoGraph*.[ch]` **path** widget implementation
-- [`tkoWidget.c`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoWidget.c) **tko::widget** base class implementation
+- [`tkoWidget.c`](https://core.tcl-lang.org/tk/doc/tip-510/generic/tko/tkoWidget.c) **tko::widget** base class implementation
 
 ## Tcl sources
 
 Tcl-source code is in `.../library/`. The new files are added into `tk.tcl`.
 
-- [`graph.tcl`](https://core.tcl.tk/tk/doc/tip-510/library/graph.tcl) graph widget bindings
-- [`path.tcl`](https://core.tcl.tk/tk/doc/tip-510/library/path.tcl) path widget helper function under **::path**
+- [`graph.tcl`](https://core.tcl-lang.org/tk/doc/tip-510/library/graph.tcl) graph widget bindings
+- [`path.tcl`](https://core.tcl-lang.org/tk/doc/tip-510/library/path.tcl) path widget helper function under **::path**
 
 ## Tests
 
 Test files are available in the .../tests/tko/ directory.
 
-- [`tkoFrame.test`](https://core.tcl.tk/tk/doc/tip-510/tests/tko/tkoFrame.test) tests from the tk frame.test file plus additional **oo::class** related tests
-- [`tkoGraph.test`](https://core.tcl.tk/tk/doc/tip-510/tests/tko/tkoGraph.test) **graph** widget tests
-- [`tkoGraph_vector.test`](https://core.tcl.tk/tk/doc/tip-510/tests/tko/tkoGraph_vector.test) **graph::vector** command tests
-- [`tkoPath.test`](https://core.tcl.tk/tk/doc/tip-510/tests/tko/tkoPath.test) **path** widget tests
+- [`tkoFrame.test`](https://core.tcl-lang.org/tk/doc/tip-510/tests/tko/tkoFrame.test) tests from the tk frame.test file plus additional **oo::class** related tests
+- [`tkoGraph.test`](https://core.tcl-lang.org/tk/doc/tip-510/tests/tko/tkoGraph.test) **graph** widget tests
+- [`tkoGraph_vector.test`](https://core.tcl-lang.org/tk/doc/tip-510/tests/tko/tkoGraph_vector.test) **graph::vector** command tests
+- [`tkoPath.test`](https://core.tcl-lang.org/tk/doc/tip-510/tests/tko/tkoPath.test) **path** widget tests
 
 # Discussion
 
@@ -142,13 +142,13 @@ and with some analysis from Donal:
 
 - Mac implementation of **graph** widget. May be borrow code from **path**
 - Remove or change old code in `generic/tko/*` files <http://code.activestate.com/lists/tcl-core/20384/>
-- Hardcoded usage of compiler and libraries in [`win/Makefile.in`](https://core.tcl.tk/tk/doc/tip-510/win/Makefile.in), [`win/makefile.vc`](https://core.tcl.tk/tk/doc/tip-510/win/makefile.vc) and [`unix/Makefile.in`](https://core.tcl.tk/tk/doc/tip-510/unix/Makefile.in) (search for "#RZ TODO").
+- Hardcoded usage of compiler and libraries in [`win/Makefile.in`](https://core.tcl-lang.org/tk/doc/tip-510/win/Makefile.in), [`win/makefile.vc`](https://core.tcl-lang.org/tk/doc/tip-510/win/makefile.vc) and [`unix/Makefile.in`](https://core.tcl-lang.org/tk/doc/tip-510/unix/Makefile.in) (search for "#RZ TODO").
 - Add **path** files in Mac implementation. It works at least in [Androwish][].
 - Which platforms should be used in **path**
-  - SDL/AGG: platform independent, more work is needed using [`tkoPath_SDLAGG.cpp`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoPath_SDLAGG.cpp). See in [Androwish][]
-  - GDI+ on Windows => working with [`tkoPath_WinGDIPlus.cpp`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoPath_WinGDIPlus.cpp)
-  - Cairo on unix => working with [`tkoPath_UnixCairo.c`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoPath_UnixCairo.c)
-  - For Mac see [`tkoPath_MacOSX.c`](https://core.tcl.tk/tk/doc/tip-510/generic/tko/tkoPath_MacOSX.c)
+  - SDL/AGG: platform independent, more work is needed using [`tkoPath_SDLAGG.cpp`](https://core.tcl-lang.org/tk/doc/tip-510/generic/tko/tkoPath_SDLAGG.cpp). See in [Androwish][]
+  - GDI+ on Windows => working with [`tkoPath_WinGDIPlus.cpp`](https://core.tcl-lang.org/tk/doc/tip-510/generic/tko/tkoPath_WinGDIPlus.cpp)
+  - Cairo on unix => working with [`tkoPath_UnixCairo.c`](https://core.tcl-lang.org/tk/doc/tip-510/generic/tko/tkoPath_UnixCairo.c)
+  - For Mac see [`tkoPath_MacOSX.c`](https://core.tcl-lang.org/tk/doc/tip-510/generic/tko/tkoPath_MacOSX.c)
 - Provide demos
 - Add more **path** tests
 - Is it necessary to translate the documentation into man format?
