--- a/tip/512.md
+++ b/tip/512.md
@@ -19,11 +19,11 @@ The normal exported symbols for those functions will be kept intact.
 # Context
 
 This TIP is inspired by Tcl commit ["Add custom exit procedure for
-tcltests executable"](http://core.tcl.tk/tcl/info/6f650b4271a1ef2e).
+tcltests executable"](https://core.tcl-lang.org/tcl/info/6f650b4271a1ef2e).
 This commit demonstrates exactly what's the problem when using
 `Tcl_SetExitProc()` in a stub-enabled extension: On win32 this
 caused a crash in many unit-tests, when tclsh ended. This problematic
-commit was corrected in [this commit](http://core.tcl.tk/tcl/info/df825488e649e15b):
+commit was corrected in [this commit](https://core.tcl-lang.org/tcl/info/df825488e649e15b):
 a thread exit handler is how this should have been done. 
 
 # Rationale
@@ -71,7 +71,7 @@ exported symbols, just like `Tcl_MainEx()` (for example).
 # Implementation
 
 Currently, the proposed implementation is available in [tip-512 branch]
-(https://core.tcl.tk/tcl/timeline?r=tip-512).
+(https://core.tcl-lang.org/tcl/timeline?r=tip-512).
 
 # Copyright
 
