--- a/tip/517.md
+++ b/tip/517.md
@@ -31,13 +31,13 @@ This new option will be accepted on all platforms, however on macOS it will be s
 # Implementation
 
 An implementation of this TIP can be found in the [tip-517 branch]
-(https://core.tcl.tk/tk/timeline?r=tip-517).
+(https://core.tcl-lang.org/tk/timeline?r=tip-517).
 
 # Alternatives
 
 Alternatively, instead of adding a new **-activerelief** menu option, the issue raised in [bug 43b596451e] (https://core.tcl-lang.org/tk/tktview/43b596451ec6b59359145ff32e689a2eec70bb85) could be resolved by changing the rendering of the active entry in Linux menues to become **TK\_RELIEF\_FLAT**, and keep the current **TK\_RELIEF\_RAISED** only if **tk\_strictMotif** is set. The drawback is that this would constitute a backwards incompatible change - However in turn this could be deemed acceptable in the current alpha state of 8.7.
 
-An implementation for this alternate proposal can be found in [branch tip-517-alt] (https://core.tcl.tk/tk/timeline?r=tip-517-alt).
+An implementation for this alternate proposal can be found in [branch tip-517-alt] (https://core.tcl-lang.org/tk/timeline?r=tip-517-alt).
 
 Having balanced the pros and cons between the two approaches, I'd prefer to add **-activerelief**, which in addition to be a backwards compatible change, has the merit of introducing additional configuration flexibility.
 
