--- a/tip/527.md
+++ b/tip/527.md
@@ -124,11 +124,11 @@ Estimate the speed of calculating the hour of the day using `clock format` only,
 
 ### Impact
 
-As the current implementation in [sebres-8-6-timerate](/tcl/timeline?n=100&r=sebres-8-6-timerate) 
-(or, for Tcl 8.5, [sebres-8-5-timerate](/tcl/timeline?n=100&r=sebres-8-5-timerate)) shows, no public API's are affected by introducing this,
+As the current implementation in [sebres-8-6-timerate](https://core.tcl-lang.org/tcl/timeline?n=100&r=sebres-8-6-timerate) 
+(or, for Tcl 8.5, [sebres-8-5-timerate](https://core.tcl-lang.org/tcl/timeline?n=100&r=sebres-8-5-timerate)) shows, no public API's are affected by introducing this,
 A few new functions are provided for Tcl's internal API (see `tclInt.h`).
 
-Don Porter (`dgp`) has made a review of the version of this change that  targets Tcl 8.7, which can be found in branch [dgp-sebres-timerate-review](/tcl/timeline?n=100&r=dgp-sebres-timerate-review).
+Don Porter (`dgp`) has made a review of the version of this change that  targets Tcl 8.7, which can be found in branch [dgp-sebres-timerate-review](https://core.tcl-lang.org/tcl/timeline?n=100&r=dgp-sebres-timerate-review).
 The branch already contains the performance testing  framework as well as a new script, `tests-perf/clock.perf.tcl` that instruments the `clock` command in preparation for integrating changes that improve its performance..
 
 <hr/>
@@ -284,7 +284,7 @@ which contains the total, average, min and max time of execution of the script t
 ### Examples
 
 For the usage examples of this test-framework, see 
-[clock-speedup-branch - tests-perf/clock.perf.tcl](/tcl/artifact/afee4f40621652b1) or
-[event-perf-branch - tests-perf/test-performance.tcl](/tcl/artifact/70523c268fdf9e3e).
+[clock-speedup-branch - tests-perf/clock.perf.tcl](https://core.tcl-lang.org/tcl/artifact/afee4f40621652b1) or
+[event-perf-branch - tests-perf/test-performance.tcl](https://core.tcl-lang.org/tcl/artifact/70523c268fdf9e3e).
 
 For the result example (produced with clock.perf.tcl) see [diff in sebres/tcl#2](https://github.com/sebres/tcl/pull/2).
