--- a/tip/537.md
+++ b/tip/537.md
@@ -42,7 +42,7 @@ This macro will be provided to 8.7 as well, but in Tcl 8.7 it will have the valu
 
 # Implementation
 
-An implementation of this TIP is present in the [regexp-api-64bit](/tcl/timeline?r=regexp-api-64bit) branch. 
+An implementation of this TIP is present in the [regexp-api-64bit](https://core.tcl-lang.org/tcl/timeline?r=regexp-api-64bit) branch. 
 
 # Copyright
 
