--- a/tip/539.md
+++ b/tip/539.md
@@ -106,7 +106,7 @@ which it is tempting but incorrect to simplify to:
 
 An implementation exists (it's a very trivial to modify **dict filter** 
 … **value** to work this way: just add an inner loop over the list of 
-patterns); see [patch #2370575](/tcl/tktview/2370575).
+patterns); see [patch #2370575](https://core.tcl-lang.org/tcl/tktview/2370575).
 
 What might be tricky is the case of **dict filter** … **key**, since 
 this currently has an optimisation for the case of a pattern without glob 
