--- a/tip/544.md
+++ b/tip/544.md
@@ -43,7 +43,7 @@ This is fully upwards compatible with Tcl 8.6.
 
 # Reference Implementation
 
-Available on branch [tip-544](/tcl/timeline?t=tip-544).
+Available on branch [tip-544](https://core.tcl-lang.org/tcl/timeline?t=tip-544).
 
 # Copyright
 
