--- a/tip/546.md
+++ b/tip/546.md
@@ -70,7 +70,7 @@ Any argument like this needs to have a type that meets several criteria.
 
 # Reference Implementation
 
-Will be drafted in [tip-546](/tcl/timeline?r=tip-546) branches.
+Will be drafted in [tip-546](https://core.tcl-lang.org/tcl/timeline?r=tip-546) branches.
 
 # Copyright
 
