--- a/tip/312.md
+++ b/tip/312.md
@@ -71,7 +71,7 @@ below:
 # Reference Implementation
 
 See [patch 1992842](https://sourceforge.net/support/tracker.php?aid=1992824).
-See [`tip-312-new` branch](https://core.tcl.tk/tcl/timeline?r=tip-312-new).
+See [`tip-312-new` branch](https://core.tcl-lang.org/tcl/timeline?r=tip-312-new).
 
 # Notes
 
