--- a/tip/386.md
+++ b/tip/386.md
@@ -26,7 +26,7 @@ Since for some time the Tcl/Tk maintainers have wanted to transfer the version
 control repository to a distributed version control system \(DVCS\), the
 decision has been made to abandon SourceForge and adopt a Fossil repository. A
 donor who wishes to remain anonymous has given a reasonably powerful machine,
-**core.tcl.tk** to the Tcl Community Association and is providing rack space
+**core.tcl-lang.org** to the Tcl Community Association and is providing rack space
 and bandwidth. The donor has also generously offered to make free shell
 accounts to qualified Tcl/Tk developers for CPU- and bandwidth-intensive tasks
 such as performance analysis and memory management audits. Interested
@@ -40,10 +40,10 @@ appropriately named **mirror1.tcl.tk**.
 # Repository Locations
 
 The code base for Tcl itself now resides in a Fossil repository at
-<http://core.tcl.tk/tcl/> .  The Fossil repository is available for anonymous
+<https://core.tcl-lang.org/tcl/> .  The Fossil repository is available for anonymous
 cloning and for examination of version control history.  At present, the bug
 tracker is disabled.  Similarly, the code base for Tk resides at
-<http://core.tcl.tk/tk> .  Tcl and Tk developers shall be granted 'push' rights
+<https://core.tcl-lang.org/tk> .  Tcl and Tk developers shall be granted 'push' rights
 to the respective repositories.
 
 Developers who are unfamiliar with Fossil are strongly encouraged to consult
@@ -61,12 +61,12 @@ trackers, and we do not wish to worry about trying to keep SourceForge and
 Fossil in sync.
 
 **mirror1.tcl.tk** shall be kept up to date by a periodic automatic
-synchronization with **core.tcl.tk**.  In order to avoid inadvertent
+synchronization with **core.tcl-lang.org**.  In order to avoid inadvertent
 forking, developers are requested not to push to mirrors unless
-**core.tcl.tk** suffers an extended outage.
+**core.tcl-lang.org** suffers an extended outage.
 
 Before using a clone from a mirror, developers should verify that it copies
-the correct version of the repository at **core.tcl.tk**.  This can be
+the correct version of the repository at **core.tcl-lang.org**.  This can be
 determined by examining the 'project ID', reported by the 'clone'
 operation. For Tcl, the ID should be
 
@@ -77,7 +77,7 @@ and for Tk, it should be
 	    b5a34cc57b6712927bc5fd34ae98433a14c9fdea 
 
 **UPDATE, June 2013** The ticket trackers have now also been migrated
-from SourceForge to **core.tcl.tk**.
+from SourceForge to **core.tcl-lang.org**.
 
 # Workflow
 
@@ -108,7 +108,7 @@ Tcl Core Team members on the following list:
    Joe English, Donal Fellows, Jeff Hobbs, Kevin Kenny, Andreas Kupries, Don
    Porter
 
-all of whom have the required access to add new users to core.tcl.tk.
+all of whom have the required access to add new users to core.tcl-lang.org.
 
 # Acknowledgments
 
