--- a/tip/424.md
+++ b/tip/424.md
@@ -153,7 +153,7 @@ does.
 
 # Reference Implementation
 
-Branch "tip-improve-exec" on core.tcl.tk holds the implementation.
+Branch "tip-improve-exec" on core.tcl-lang.org holds the implementation.
 
 # Copyright
 
