--- a/tip/453.md
+++ b/tip/453.md
@@ -7,7 +7,7 @@
 	Post-History:   
 	Keywords:       Build tooling
 	Tcl-Version:    8.7
-	Implementation-URL: https://core.tcl.tk/tclconfig/timeline?r=practcl
+	Implementation-URL: https://core.tcl-lang.org/tclconfig/timeline?r=practcl
 -----
 
 # Abstract
@@ -160,7 +160,7 @@ A simple example would by the tclconfig templates from TEA:
 
 	EXTENSION tclconfig {
 	   tag  trunk
-	   fossil_url http://core.tcl.tk/tclconfig
+	   fossil_url https://core.tcl-lang.org/tclconfig
 	}
 
 The EXTENSION keyword is intended to take the following arguments:
