--- a/tip/471.md
+++ b/tip/471.md
@@ -43,7 +43,7 @@ variable linked to.
 
 # Reference Implementation
 
-The reference implementation is available in the [info-linkedname](http://core.tcl.tk/tcl/timeline?r=info-linkedname) branch.
+The reference implementation is available in the [info-linkedname](https://core.tcl-lang.org/tcl/timeline?r=info-linkedname) branch.
 
 The code is licensed under the BSD license.
 
