--- a/tip/484.md
+++ b/tip/484.md
@@ -91,7 +91,7 @@ script level, the change is invisible.
 
 # Reference Implementation
 
-An implementation of this TIP can be found in the [no-wideint](https://core.tcl.tk/tcl/timeline?r=no-wideint) branch.
+An implementation of this TIP can be found in the [no-wideint](https://core.tcl-lang.org/tcl/timeline?r=no-wideint) branch.
 
 The code is licensed under the same license as Tcl.
 
