--- a/tip/500.md
+++ b/tip/500.md
@@ -537,7 +537,7 @@ This example highlights the behaviour of private variables and
 
 # Implementation
 
-See the [`tip-500` branch](https://core.tcl.tk/tcl/timeline?r=tip-500).
+See the [`tip-500` branch](https://core.tcl-lang.org/tcl/timeline?r=tip-500).
 
 # Copyright
 
