--- a/tip/518.md
+++ b/tip/518.md
@@ -29,7 +29,7 @@ Mostly, it looks just ugly, but there are critical use-cases, specially in scrol
 When the BWidget autoscroll package is used, which displays scrollbars on demand, the scrollbars do not disappear if the contents is gone.
 And there is nothing, a programmer can do, as the Configure event does not fire on the scrolled frame widget.
 
-Another example is the scrolledwindow example by Emiliano in [ticket 2863003fff](https://core.tcl.tk/tk/info/12006979562649c9), where the solution 2 specific part may be removed \(or is ignored\).
+Another example is the scrolledwindow example by Emiliano in [ticket 2863003fff](https://core.tcl-lang.org/tk/info/12006979562649c9), where the solution 2 specific part may be removed \(or is ignored\).
 
 A typical workaround is to configure the width/height manually after the last children was unmapped.
 Unfortunately, this fact may not be determined for example by scrolling widgets etc. An eventual Configure binding is not firing.
@@ -116,11 +116,11 @@ Here are additional lines for the example above.
 
 # Reference Implementation
 
-Emiliano has provided a [ticket 2863003fff](https://core.tcl.tk/tk/info/2863003fff) with the implementation in [branch bug-d6b95ce492](https://core.tcl.tk/tk/timeline?r=bug-d6b95ce492&nd&c=2016-09-21+06%3A32%3A55&n=200).
+Emiliano has provided a [ticket 2863003fff](https://core.tcl-lang.org/tk/info/2863003fff) with the implementation in [branch bug-d6b95ce492](https://core.tcl-lang.org/tk/timeline?r=bug-d6b95ce492&nd&c=2016-09-21+06%3A32%3A55&n=200).
 
 This solution is now continued with the tag "tip518-event-last-child-unmanaged".
 
-Koen Dankart and François Vogel have worked on the solution of the similar tip474, which is available in [branch tip-454](http://core.tcl.tk/tk/timeline?n=100&r=tip-454).
+Koen Dankart and François Vogel have worked on the solution of the similar tip474, which is available in [branch tip-454](https://core.tcl-lang.org/tk/timeline?n=100&r=tip-454).
 This information may eventually also be relevant.
 
 # Rejected Proposal
